syntax = "proto3";
package compiler;

option java_package = "us.moria.js13k";
option java_outer_classname = "CompilerProtos";

message Define {
  string name = 1;
  oneof value {
    bool boolean = 2;
    double number = 3;
    string string = 4;
  }
}

message BuildRequest {
  repeated string file = 1;
  repeated string entry_point = 2;
  string base_directory = 3;
  string output_source_map = 4;
  repeated Define define = 5;
  bool warn_unknown_types = 6;
}

message Diagnostic {
  enum Severity {
    UNKNOWN = 0;
    ERROR = 1;
    WARNING = 2;
    NOTICE = 3;
  }
  Severity severity = 1;
  string message = 2;
  string file = 3;
  uint32 line = 4;
  uint32 column = 5;
}

message BuildResponse {
  bytes code = 1;
  bytes source_map = 2;
  repeated Diagnostic diagnostic = 3;
}
